# wangluoxueyuan

./: .gitignore  README.md  build.bat  build.sh  pyproject.toml  requirements.txt  run_course.py  run_service.py  run_year.py  start.bat  start.sh  wlxy_login.py
.github/workflows/: ci.yml
docs/: API_REQUIREMENTS.md  LOGIN_FLOW.md  通用需求说明.md
docs/api-discovery/: exam.md  member.md  study.md  train.md
docs/handoffs/: PHASE1_login-recon-done.md  PHASE2_api-tools-done.md  PHASE3_stability-done.md  PHASE4_runner-done.md  PHASE5_service-done.md  PHASE6_packaging-done.md
docs/verification/: PHASE1_REPORT.md  PHASE2_REPORT.md  PHASE3_REPORT.md  PHASE4_REPORT.md  PHASE5_REPORT.md  PHASE6_REPORT.md
scripts/: build.py  smoke_frozen.py  wlxy.spec.template
wlxy_api/: API_REFERENCE.md  __init__.py  captcha.py  captcha_limiter.py  cli_exam.py  cli_login.py  cli_member.py  cli_study.py  cli_train.py  cli_year.py  client.py  config.py  credential_parser.py  exam.py  login.py  member.py  responses.py  session_manager.py  session_retry.py  study.py  train.py  year_task.py
wlxy_svc/: __init__.py  config.py  credential_parser.py  error_log.py  orchestrator.py  runtime.py  session_retry.py  states.py  study_hours.py  worker.py  worker_base.py  year_sync.py
wlxy_svc/persistence/: store.py
wlxy_svc/web/: app.py  excel_io.py
wlxy_svc/web/templates/: index.html
